@@ -184,7 +184,7 @@ $SHOW_LEVEL2_NOTES = true;			// -- Show level 2 Notes & Sources on Notes & Sourc
 $SHOW_AGE_DIFF = false;				// -- show age diff between spouses and between children on close relatives tab
 $EDIT_AUTOCLOSE = false;		//-- autoclose edit window when update successful
 $NOTE_FACTS_UNIQUE = "";
-$NOTE_FACTS_ADD = "ASSO,NOTE,OBJE,REPO";
+$NOTE_FACTS_ADD = "ASSO,SOUR,NOTE,OBJE,REPO";
 $NOTE_FACTS_QUICK = "";
 $SOUR_FACTS_UNIQUE = "AUTH,ABBR,TITL,PUBL,TEXT";
 $SOUR_FACTS_ADD = "NOTE,OBJE,REPO";
